# Marvin-rust

./: Cargo.toml  Makefile.toml
src/: main.rs
src/client/: marvinclient.rs  marvinshardmanager.rs  mod.rs
src/commands/: commands.rs  groups.rs  help.rs  hooks.rs
src/events/: handler.rs
src/libs/: config.rs  initialize.rs  marvinclient.rs  mod.rs
