[package]
name = "marvin"
version = "0.1.0"
authors = ["Rowen Stipe <Rowen.Stipe@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {git = "https://github.com/serenity-rs/serenity.git", default-features=false, features = ["client",  "gateway", "rustls_backend", "model"]}
tokio = {version = "1", features = ["full"]}
tokio-cron-scheduler = "0.9.4"
dotenv = "0.15"